argocd/applications/keycloak/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.proompteng.ai`)
      services:
        - name: keycloak-keycloakx-http
          port: 80
